--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
+<section class="header">
+
+    <h1>This is my portfolio type</h1>
+    <p class="greenLetters"> Ayooooo let's make this work for a second you feel me?</p>
+
+
+</section>
+
+
 
 
 
