basic index and css file update

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
+<nav>
+    <h1>Jeremiah Taylor</h1>
+
+
+</nav>
+
 <section class="header">
 
-    <h1>This is my portfolio type</h1>
-    <p class="greenLetters"> Ayooooo let's make this work for a second you feel me?</p>
+   
 
 
 </section>
