--- a/index.html
+++ b/index.html
@@ -3,28 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeremiah Taylor's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<nav>
-    <h1>Jeremiah Taylor</h1>
+<nav class="nav1">
+    <h1 class="nav1">Jeremiah Taylor</h1>
 
 
 </nav>
 
-<section class="header">
-
-   
-
-
-</section>
 
 
 
 
 
-<body>
+<body class="body">
     
 </body>
 
