starting on the next div

--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
         <button>Contact Me</button>
     </ul>
 
-    
-
-
-
 </nav>
+
+<section class="totalCard">
+    <div>
+        <h2 class="abtMe">About Me</h2>
+
+    </div>
+
+</section>
 
 
 
