adding the img and removing excess space

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <nav class="nav1">
     <h1 class="name">Jeremiah</h1>
+    <h2 class="occupations">Historian/Software Devloper/Actor</h2>
 
     <h2 class="subTitle">Welcome to my portfolio!!</h2>
 
@@ -23,10 +24,12 @@
 </nav>
 
 <section class="totalCard">
-    <div>
-        <h2 class="abtMe">About Me</h2>
+    <img src="./assets/IMG_6984.jpg" alt="Image of Jeremiah Taylor">
 
-    </div>
+    <h2>About Me!!</h2>
+
+
+    
 
 </section>
 
