changing header border and starting links

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button>Bio</button>
         <button>Projects</button>
         <button>Contact Me</button>
+        <a href="#body2">Click Here!</a>
     </ul>
 
 </nav>
