--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     
 
     <ul>
-        <button>Bio</button>
+        <!--<button>Bio</button>
         <button>Projects</button>
-        <button>Contact Me</button>
+        <button>Contact Me</button> -->
+        <a href="bio">Bio</a>
+        <a href="projects">Projects</a>
+        <a href="contactMe">Contact Me</a>
         <a href="#body2">Click Here!</a>
     </ul>
 
