adding next image and creating new containers

--- a/index.html
+++ b/index.html
@@ -39,13 +39,33 @@
             <h2 class="subTitle">Welcome to my portfolio!!</h2>
             <p>My name is Jeremiah Taylor but my friend's call me JT. I've created this portfolio to act as a creative hub for all of my projects. I will be adding more as I progress through my coding bootcamp. I will also use this as a place to showcase other projects I am working on outside of class.</p>
             
-
-
-
-            
-
         </section>
+
     </article>
+
+    <article class="abtMe">
+        <section class="abtMePic">
+            <img class="disneyPic" src="./assets/DSC00353.JPG" alt="Image of Jeremiah Taylor at Disneyworld">
+        </section>
+
+        <section class="abtMeText">
+
+            <h2>About Me</h2>
+            <p>I never imagined I would end up in a career field like software development. Throughout high school and university, I thought I would be auditioning to perform on broadway. However, it has been an interesting journey finding my way here! </p>
+        </section>
+
+
+
+    </article>
+
+
+    <section>
+
+
+
+
+
+    </section>
 
 
 
