adding background image and centering text

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     </nav>
 
+    
     <article class="imgWelcome">
 
         <section class="totalCard">
@@ -51,7 +52,7 @@
         <section class="abtMeText">
 
             <h2>About Me</h2>
-            <p>I never imagined I would end up in a career field like software development. Throughout high school and university, I thought I would be auditioning to perform on broadway. However, it has been an interesting journey finding my way here! </p>
+            <p>I never imagined I would end up in a career field like software development. Throughout high school and university, I thought I would be auditioning to perform on broadway. However, it has been an interesting journey finding my way here! I have worked many different jobs</p>
         </section>
 
 
@@ -60,6 +61,7 @@
 
 
     <section>
+        
 
 
 
@@ -69,6 +71,7 @@
 
 
 
+    <img class="woodPic" src="https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixid=M3wxMjA3fDB8MXxzZWFyY2h8MTZ8fGJhY2tncm91bmQlMjBpbWFnZXxlbnwwfHx8fDE3MDQwNzI2MDN8MA&ixlib=rb-4.0.3">
 
 
 
