adding the images from project screenshots

--- a/index.html
+++ b/index.html
@@ -47,16 +47,26 @@
     <article class="abtMe">
 
         <h2>Projects</h2>
-
-
-
-
-
-
     </article>
 
 
-    <section>
+    <section class="projectsContain">
+            <!--Add in the links to your projects so far
+                Reference the navbar links to help creating this section-->
+
+        <div class="preWork">PreWork Website
+
+            <img src="./assets/Screenshot 2023-06-28 at 12.17.05 AM.png" alt="Image of PreWork website.">
+
+
+
+        </div>
+
+        <div class="horiseonRef">Horiseon Refractor</div>
+
+        <div class="tms">Taylor Made Studios?</div>
+
+
         
 
 
