adding images under projects section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <article class="imgWelcome">
 
         <section class="totalCard">
-            <img class="myPic" src="./assets/IMG_6984.jpg" alt="Image of Jeremiah Taylor">
+            <img class="myPic" src="./assets/Picture of me.jpg" alt="Image of Jeremiah Taylor">
         </section>
 
         <section class="welPort">
@@ -54,17 +54,27 @@
             <!--Add in the links to your projects so far
                 Reference the navbar links to help creating this section-->
 
-        <div class="preWork">PreWork Website
+        <div class="preWork">
 
-            <img src="./assets/Screenshot 2023-06-28 at 12.17.05 AM.png" alt="Image of PreWork website.">
+            <h2>PreWork Website</h2> 
 
-
+            <img src="./assets/Prework website.png" alt="Image of PreWork website.">
 
         </div>
 
-        <div class="horiseonRef">Horiseon Refractor</div>
+        <div class="horiseonRef">
+            <h2>Horiseon Refractor</h2> 
 
-        <div class="tms">Taylor Made Studios?</div>
+            <img src="./assets/Horiseon Refractor.png" alt="Image of my Horiseon refractor.">
+
+        </div>
+
+        <div class="oldPortfolio">
+            <h2>Old Portfolio</h2>
+
+            <img src="./assets/Old portfolio.png" alt="Place holder project">
+
+        </div>
 
 
         
