adding a bio section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 
     </article>
 
+    <article class="bio">
+
+        <h2>Bio</h2>
+        <p>Here is where I will put my bio. Lol when I come up with one worth putting here.</p>
+    </article>
+
     <article class="abtMe">
 
         <h2>Projects</h2>
@@ -76,25 +82,36 @@
 
         </div>
 
+    </section>
 
-        
-
-
-
+    <section>
 
 
     </section>
+
+    
+
 
 
 
     <img class="woodPic" src="https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixid=M3wxMjA3fDB8MXxzZWFyY2h8MTZ8fGJhY2tncm91bmQlMjBpbWFnZXxlbnwwfHx8fDE3MDQwNzI2MDN8MA&ixlib=rb-4.0.3">
 
+    <footer>
 
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+
+
+    </footer>
 
 <body class="body">
 
 
-</body>
+
 
 
 </html>
