--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <article class="bio">
 
         <h2>Bio</h2>
-        <p>Here is where I will put my bio. Lol when I come up with one worth putting here.</p>
+        <p>It is hard to say exactly what I am. I have spent time in many different career fields over my 24 years. From working at a zoo to working as a deckhand on a small ship cruiseline, I've seen a lot. However, my journey in Software Development is my newest adventure. I plan to pursue this new opportunity to improve my life as well as others. I hope to continue to make connections with mentors and peers who can guide me along my path of education. I am excited to put my knowledge and experience to use in this industry and look forward to developing my developers' mindset. </p>
     </article>
 
     <article class="abtMe">
