adding the footer and the link destinations in

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <!--<button>Bio</button>
             <button>Projects</button>
             <button>Contact Me</button> -->
-            <a href="bio">Bio</a>
-            <a href="projects">Projects</a>
-            <a href="contactMe">Contact Me</a>
+            <a href="#bio1">Bio</a>
+            <a href="#projects">Projects</a>
+            <a href="#footer">Contact Me</a>
             <a href="#body2">Click Here!</a>
         </ul>
 
@@ -44,15 +44,21 @@
 
     </article>
 
-    <article class="bio">
+    <article class="bio" id="bio1">
 
         <h2>Bio</h2>
         <p>It is hard to say exactly what I am. I have spent time in many different career fields over my 24 years. From working at a zoo to working as a deckhand on a small ship cruiseline, I've seen a lot. However, my journey in Software Development is my newest adventure. I plan to pursue this new opportunity to improve my life as well as others. I hope to continue to make connections with mentors and peers who can guide me along my path of education. I am excited to put my knowledge and experience to use in this industry and look forward to developing my developers' mindset. </p>
     </article>
 
-    <article class="abtMe">
+    <article class="abtMe" id="projects">
 
         <h2>Projects</h2>
+        <p>As I continue my journey, I will be able to add more projects. For now, we have these three assignments from class. </p>
+        <ul>
+            <li><span>I.</span> We have a prework assignment created to help students study basic terms related to each language.</li>
+            <li><span>II.</span> The first project I worked on to refractor code. After a couple of trys I started to see the changes I needed to make.</li>
+            <li><span>III.</span> This is not a published webpage but I wanted to show the difference of where I was when I started to where I am now. Look at the difference!</li>
+        </ul>
     </article>
 
 
@@ -96,12 +102,13 @@
 
     <img class="woodPic" src="https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixid=M3wxMjA3fDB8MXxzZWFyY2h8MTZ8fGJhY2tncm91bmQlMjBpbWFnZXxlbnwwfHx8fDE3MDQwNzI2MDN8MA&ixlib=rb-4.0.3">
 
-    <footer>
+    <footer id="footer">
+
+        <h2>Contact Me!</h2>
 
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Email: jt84air@gmail.com</li>
+            <li>Phone: (325)665-4950</li>
         </ul>
 
 
