--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#bio1">Bio</a>
             <a href="#projects">Projects</a>
             <a href="#footer">Contact Me</a>
-            <a href="#body2">Click Here!</a>
+            <a href="https://www.youtube.com/watch?v=m2u9VgKZHDo">Click Here!</a>
         </ul>
 
     </nav>
@@ -70,21 +70,30 @@
 
             <h2>PreWork Website</h2> 
 
+            <a href="https://jeremiahtaylor24.github.io/prework-study-guide/">
+
+            
             <img src="./assets/Prework website.png" alt="Image of PreWork website.">
+            </a>
 
         </div>
 
         <div class="horiseonRef">
             <h2>Horiseon Refractor</h2> 
 
-            <img src="./assets/Horiseon Refractor.png" alt="Image of my Horiseon refractor.">
+            <a href="https://jeremiahtaylor24.github.io/horiseon-refractor12.2/">
+
+            <img src="./assets/Horiseon Refractor.png" alt="Image of my Horiseon refractor."> </a>
 
         </div>
 
         <div class="oldPortfolio">
             <h2>Old Portfolio</h2>
 
+            <a href="https://jeremiahtaylor24.github.io/portfolio2.0/">
+
             <img src="./assets/Old portfolio.png" alt="Place holder project">
+            </a>
 
         </div>
 
